--- a/journal.org
+++ b/journal.org
@@ -4041,3 +4041,291 @@ ggplot(new_t, aes(mnk,duration,color=origin)) + geom_point(alpha=0.6)
 The generated quantities are very close to our data. Some points are
 missing, but that is because of the simplicity of our model (we need
 to consider the mn, mk and nk coefficients).
+*** 2019-05-28 tuesday
+**** Made a M-2 N-2 model for dgemm
+***** A first test with the model
+
+The idea of this model is to take in account the other coefficients
+that might be important: mn, mk and nk.
+
+#+begin_src R :results output :session *R* :exports both
+library(rstan)
+library(dplyr)
+
+data=read.csv(file="~/Documents/org/dgemm.csv", header=TRUE, sep=",")
+data=data.frame(as.numeric(data$m),as.numeric(data$n),as.numeric(data$k),data$duration,data$cpu)
+names(data)=c("m","n","k","duration","cpu")
+
+data$mnk=data$m * data$n * data$k
+tmp=select(filter(data, data$mnk < 2e10),everything())
+#+end_src
+
+For this model, we no longer give directly mnk, but instead the three
+variables m, n and k and we compute the coefficients in the stan
+model, with the transformed data block. To avoid using a lot of
+variables, we now have a vector of 5 values for mu and sigma,
+corresponding to the coefficients in the following order: the mnk
+coefficient, the mn one, the mk one, the nk one and finally the
+intercept (or "noise" as we called it before for sigma).
+
+#+begin_src R :results output :session *R* :exports both
+modelString = "data {
+    int<lower=0> N;
+    vector[N] m;
+    vector[N] n;
+    vector[N] k;
+    vector[N] duration;
+    vector[5] mu_mean;
+    vector[5] mu_sd;
+    vector[5] sigma_mean;
+    vector[5] sigma_sd;
+}
+transformed data {
+    vector[N] mnk;
+    vector[N] mn;
+    vector[N] mk;
+    vector[N] nk;
+    for(i in 1:N){
+      mnk[i] = m[i]*n[i]*k[i];
+      mn[i] = m[i]*n[i];
+      mk[i] = m[i]*k[i];
+      nk[i] = n[i]*k[i];
+    }
+}
+parameters {
+    real mu_raw;
+    real<lower=0> sigma_raw;
+}
+transformed parameters {
+    vector[5] mu;
+    vector[5] sigma;
+    for(j in 1:5){
+      mu[j] = mu_mean[j] + mu_raw * mu_sd[j]; //consider testing with mu_raw and sigma_raw as vectors
+      sigma[j] = sigma_mean[j] + sigma_raw * sigma_sd[j];
+    }
+}
+model {
+    mu_raw ~ normal(0,1);
+    sigma_raw ~ normal(0,1);
+    duration ~ normal(mu[1]*mnk + mu[2]*mn + mu[3]*mk + mu[4]*nk + mu[5], sigma[1]*mnk + sigma[2]*mn + sigma[3]*mk + sigma[4]*nk + sigma[5]);
+}
+
+generated quantities {
+  real mnk_pos = mnk[categorical_rng(rep_vector(1,N) / N)];
+  real mn_pos = mn[categorical_rng(rep_vector(1,N) / N)];
+  real mk_pos = mk[categorical_rng(rep_vector(1,N) / N)];
+  real nk_pos = nk[categorical_rng(rep_vector(1,N) / N)];
+  real y_sim = normal_rng(mu[1]*mnk_pos + mu[2]*mn_pos + mu[3]*mk_pos + mu[4]*nk_pos + mu[5], sigma[1]*mnk_pos + sigma[2]*mn_pos + sigma[3]*mk_pos + sigma[4]*nk_pos + sigma[5]);
+}
+"
+sm = stan_model(model_code = modelString)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+t=sample_n(tmp,500)
+dt = list(N=500,m=t$m,n=t$n,k=t$k,duration=t$duration,mu_mean=c(6.814095e-11,3.416642e-11,1.648690e-09,3.067383e-09,7.661272e-07),mu_sd=c(6.814095e-12,3.416642e-12,1.648690e-10,3.067383e-10,7.661272e-08),sigma_mean=c(1.224054e-12,1.185692e-11,2.846888e-11,3.073464e-11,7.462142e-07),sigma_sd=c(1.224054e-13,1.185692e-12,2.846888e-12,3.073464e-12,7.462142e-08))
+#As usual, we use the values of the default case in Tom's analysis as prior
+
+fit = sampling(sm,data=dt, iter=500, chains=8)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+print(fit,digits=15,pars=c("mu[1]","mu[2]","mu[3]","mu[4]","mu[5]","sigma[1]","sigma[2]","sigma[3]","sigma[4]","sigma[5]"))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Inference for Stan model: 3373ca2cb4c480c671f2ce5f776dab86.
+8 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=2000.
+
+                 mean     se_mean           sd         2.5%          25%
+mu[1]    6.487400e-11 3.00000e-15 1.460000e-13 6.457900e-11 6.478000e-11
+mu[2]    3.252800e-11 2.00000e-15 7.300000e-14 3.238100e-11 3.248100e-11
+mu[3]    1.569639e-09 8.30000e-14 3.541000e-12 1.562518e-09 1.567368e-09
+mu[4]    2.920309e-09 1.54000e-13 6.589000e-12 2.907061e-09 2.916084e-09
+mu[5]    7.293932e-07 3.84070e-11 1.645633e-09 7.260841e-07 7.283379e-07
+sigma[1] 3.150000e-12 1.00000e-15 6.000000e-14 3.035000e-12 3.111000e-12
+sigma[2] 3.051100e-11 1.40000e-14 5.790000e-13 2.939900e-11 3.013200e-11
+sigma[3] 7.325700e-11 3.30000e-14 1.390000e-12 7.058900e-11 7.234900e-11
+sigma[4] 7.908700e-11 3.60000e-14 1.501000e-12 7.620700e-11 7.810700e-11
+sigma[5] 1.920181e-06 8.62853e-10 3.644106e-08 1.850240e-06 1.896372e-06
+                  50%          75%        97.5% n_eff      Rhat
+mu[1]    6.487400e-11 6.496900e-11 6.515900e-11  1836 1.0017786
+mu[2]    3.252800e-11 3.257600e-11 3.267100e-11  1836 1.0017786
+mu[3]    1.569640e-09 1.571934e-09 1.576538e-09  1836 1.0017786
+mu[4]    2.920311e-09 2.924578e-09 2.933145e-09  1836 1.0017786
+mu[5]    7.293938e-07 7.304594e-07 7.325992e-07  1836 1.0017786
+sigma[1] 3.149000e-12 3.188000e-12 3.272000e-12  1784 0.9996186
+sigma[2] 3.050400e-11 3.088100e-11 3.169300e-11  1784 0.9996186
+sigma[3] 7.324200e-11 7.414500e-11 7.609600e-11  1784 0.9996186
+sigma[4] 7.907100e-11 8.004600e-11 8.215300e-11  1784 0.9996186
+sigma[5] 1.919785e-06 1.943469e-06 1.994603e-06  1784 0.9996186
+
+Samples were drawn using NUTS(diag_e) at Tue May 28 14:29:08 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/trace_dgemm_m-2.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit,pars=c("mu[1]","mu[2]","mu[3]","mu[4]","mu[5]","sigma[1]","sigma[2]","sigma[3]","sigma[4]","sigma[5]"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/trace_dgemm_m-2.png]]
+
+Once again, all the chains converge in the expected way.
+
+#+begin_src R :results output :session *R* :exports both
+extracted=rstan::extract(fit)
+
+t_generated = data.frame(mnk=extracted$mnk_pos, duration=extracted$y_sim, origin='generated')
+t_generated = t_generated[sample(nrow(t_generated), nrow(t)), ]
+t=select(t,c("mnk","duration"))
+t$origin = 'initial'
+new_t = rbind(t, t_generated)
+#+end_src
+
+#+begin_src R :results output graphics :file ./images/generated_quantities_dgemm_m-2.png :exports both :width 600 :height 400 :session *R* 
+ggplot(new_t, aes(mnk,duration,color=origin)) + geom_point(alpha=0.6)
+#+end_src
+
+#+RESULTS:
+[[file:./images/generated_quantities_dgemm_m-2.png]]
+
+Despite the addition of the other coefficients, it seems as if there
+might still be a missing factor. This time the generated data
+considers more points, and some farther from the mean, but there are
+still some places where the points are not represented, like the ones
+corresponding to a mnk of 4e+09. This might be simply caused by the
+sampling though.
+
+***** A second test with as many observations of mu_raw and sigma_raw as coefficients
+
+#+begin_src R :results output :session *R* :exports both
+modelString = "data {
+    int<lower=0> N;
+    vector[N] m;
+    vector[N] n;
+    vector[N] k;
+    vector[N] duration;
+    vector[5] mu_mean;
+    vector[5] mu_sd;
+    vector[5] sigma_mean;
+    vector[5] sigma_sd;
+}
+transformed data {
+    vector[N] mnk;
+    vector[N] mn;
+    vector[N] mk;
+    vector[N] nk;
+    for(i in 1:N){
+      mnk[i] = m[i]*n[i]*k[i];
+      mn[i] = m[i]*n[i];
+      mk[i] = m[i]*k[i];
+      nk[i] = n[i]*k[i];
+    }
+}
+parameters {
+    vector[5] mu_raw;
+    vector[5] sigma_raw;
+}
+transformed parameters {
+    vector[5] mu;
+    vector[5] sigma;
+    for(j in 1:5){
+      mu[j] = mu_mean[j] + mu_raw[j] * mu_sd[j]; //a test with mu_raw and sigma_raw as vectors
+      sigma[j] = sigma_mean[j] + sigma_raw[j] * sigma_sd[j];
+    }
+}
+model {
+    mu_raw ~ normal(0,1);
+    sigma_raw ~ normal(0,1);
+    duration ~ normal(mu[1]*mnk + mu[2]*mn + mu[3]*mk + mu[4]*nk + mu[5], sigma[1]*mnk + sigma[2]*mn + sigma[3]*mk + sigma[4]*nk + sigma[5]);
+}
+
+generated quantities {
+  real mnk_pos = mnk[categorical_rng(rep_vector(1,N) / N)];
+  real mn_pos = mn[categorical_rng(rep_vector(1,N) / N)];
+  real mk_pos = mk[categorical_rng(rep_vector(1,N) / N)];
+  real nk_pos = nk[categorical_rng(rep_vector(1,N) / N)];
+  real y_sim = normal_rng(mu[1]*mnk_pos + mu[2]*mn_pos + mu[3]*mk_pos + mu[4]*nk_pos + mu[5], sigma[1]*mnk_pos + sigma[2]*mn_pos + sigma[3]*mk_pos + sigma[4]*nk_pos + sigma[5]);
+}
+"
+sm = stan_model(model_code = modelString)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+t=sample_n(tmp,500)
+dt = list(N=500,m=t$m,n=t$n,k=t$k,duration=t$duration,mu_mean=c(6.814095e-11,3.416642e-11,1.648690e-09,3.067383e-09,7.661272e-07),mu_sd=c(6.814095e-12,3.416642e-12,1.648690e-10,3.067383e-10,7.661272e-08),sigma_mean=c(1.224054e-12,1.185692e-11,2.846888e-11,3.073464e-11,7.462142e-07),sigma_sd=c(1.224054e-13,1.185692e-12,2.846888e-12,3.073464e-12,7.462142e-08))
+#As usual, we use the values of the default case in Tom's analysis as prior
+
+fit = sampling(sm,data=dt, iter=500, chains=8)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+print(fit,digits=15,pars=c("mu[1]","mu[2]","mu[3]","mu[4]","mu[5]","sigma[1]","sigma[2]","sigma[3]","sigma[4]","sigma[5]"))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Inference for Stan model: ec98b735ff133e67a71659791e2e2fed.
+8 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=2000.
+
+                 mean      se_mean           sd         2.5%          25%
+mu[1]    6.446800e-11 4.000000e-15 2.000000e-13 6.405400e-11 6.433900e-11
+mu[2]    3.483800e-11 5.600000e-14 3.417000e-12 2.815500e-11 3.254500e-11
+mu[3]    1.898298e-09 2.046000e-12 1.022110e-10 1.700526e-09 1.828444e-09
+mu[4]    3.124828e-09 1.109000e-12 6.508000e-11 2.998773e-09 3.078611e-09
+mu[5]    7.838633e-07 1.214177e-09 7.448801e-08 6.387858e-07 7.324592e-07
+sigma[1] 3.404000e-12 1.000000e-15 6.100000e-14 3.289000e-12 3.361000e-12
+sigma[2] 1.223500e-11 1.800000e-14 1.182000e-12 1.002000e-11 1.142100e-11
+sigma[3] 3.001600e-11 4.800000e-14 2.839000e-12 2.460100e-11 2.811300e-11
+sigma[4] 3.148200e-11 5.100000e-14 3.239000e-12 2.524000e-11 2.917900e-11
+sigma[5] 7.850231e-07 1.083913e-09 7.040377e-08 6.517484e-07 7.352331e-07
+                  50%          75%        97.5% n_eff      Rhat
+mu[1]    6.447600e-11 6.460100e-11 6.486400e-11  2288 0.9992614
+mu[2]    3.482700e-11 3.717600e-11 4.167300e-11  3759 0.9993119
+mu[3]    1.898794e-09 1.967225e-09 2.095195e-09  2495 0.9994625
+mu[4]    3.127444e-09 3.167501e-09 3.250138e-09  3445 0.9972609
+mu[5]    7.841385e-07 8.367408e-07 9.249504e-07  3764 0.9980433
+sigma[1] 3.404000e-12 3.446000e-12 3.524000e-12  3193 0.9976414
+sigma[2] 1.221800e-11 1.298100e-11 1.469000e-11  4514 0.9970022
+sigma[3] 3.005000e-11 3.197300e-11 3.559300e-11  3455 0.9978838
+sigma[4] 3.146900e-11 3.365600e-11 3.778200e-11  4068 0.9984935
+sigma[5] 7.843223e-07 8.331268e-07 9.298525e-07  4219 0.9988116
+
+Samples were drawn using NUTS(diag_e) at Tue May 28 16:43:59 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/trace_dgemm_m-2_second_test.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit,pars=c("mu[1]","mu[2]","mu[3]","mu[4]","mu[5]","sigma[1]","sigma[2]","sigma[3]","sigma[4]","sigma[5]"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/trace_dgemm_m-2_second_test.png]]
+
+#+begin_src R :results output :session *R* :exports both
+extracted=rstan::extract(fit)
+
+t_generated = data.frame(mnk=extracted$mnk_pos, duration=extracted$y_sim, origin='generated')
+t_generated = t_generated[sample(nrow(t_generated), nrow(t)), ]
+t=select(t,c("mnk","duration"))
+t$origin = 'initial'
+new_t = rbind(t, t_generated)
+#+end_src
+
+#+begin_src R :results output graphics :file ./images/generated_quantities_dgemm_m-2_second_test.png :exports both :width 600 :height 400 :session *R* 
+ggplot(new_t, aes(mnk,duration,color=origin)) + geom_point(alpha=0.6)
+#+end_src
+
+#+RESULTS:
+[[file:./images/generated_quantities_dgemm_m-2_second_test.png]]
+There doesn't seem to be much difference between the two, but it might
+be more correct to use different observations of mu_raw and sigma_raw
+for the different coefficients.
